src/main/java/org/wikimodel/wem/gwiki/javacc/GWikiScanner.java
/* Generated By:JavaCC: Do not edit this line. GWikiScanner.java */
/*******************************************************************************
 * Copyright (c) 2005,2007 Cognium Systems SA and others.
 * All rights reserved. This program and the accompanying materials
 * are made available under the terms of the Apache License, Version 2.0
 * which accompanies this distribution, and is available at
 * http://www.apache.org/licenses/LICENSE-2.0
 * 
 * Contributors:
 *     Cognium Systems SA - initial API and implementation
 *******************************************************************************/
package org.wikimodel.wem.gwiki.javacc;

import org.wikimodel.wem.WikiStyle;
import org.wikimodel.wem.impl.IWikiScannerContext;

/**
 * This is the internal wiki page parser generated from the grammar file.
 * 
 * @author kotelnikov
 */
public class GWikiScanner implements GWikiScannerConstants {


    private IWikiScannerContext fContext;

    public void parse(IWikiScannerContext context) throws ParseException {
        fContext = context;
        doParse();
    }

  final public Token getINTERNAL_VERBATIM_START() throws ParseException {
                                         Token t=null;
    t = jj_consume_token(INTERNAL_VERBATIM_START);
                                                                                       {if (true) return t;}
    throw new Error("Missing return statement in function");
  }

  final public Token getINTERNAL_VERBATIM_END() throws ParseException {
                                       Token t=null;
    t = jj_consume_token(INTERNAL_VERBATIM_END);
                                                                                   {if (true) return t;}
    throw new Error("Missing return statement in function");
  }

  final public Token getINTERNAL_VERBATIM_CONTENT() throws ParseException {
                                           Token t=null;
    t = jj_consume_token(INTERNAL_VERBATIM_CONTENT);
                                                                                           {if (true) return t;}
    throw new Error("Missing return statement in function");
  }

// <getters>
  final public Token getVERBATIM_START() throws ParseException {
                                Token t=null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case I_VERBATIM_START:
      t = jj_consume_token(I_VERBATIM_START);
      break;
    case D_VERBATIM_START:
      t = jj_consume_token(D_VERBATIM_START);
      break;
    default:
      jj_la1[0] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
                                                                                            {if (true) return t;}
    throw new Error("Missing return statement in function");
  }

  final public Token getESCAPE() throws ParseException {
                        Token t=null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case I_ESCAPE:
      t = jj_consume_token(I_ESCAPE);
      break;
    case D_ESCAPE:
      t = jj_consume_token(D_ESCAPE);
      break;
    default:
      jj_la1[1] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
                                                                    {if (true) return t;}
    throw new Error("Missing return statement in function");
  }

  final public Token getLIST_ITEM() throws ParseException {
                           Token t=null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case I_LIST_ITEM:
      t = jj_consume_token(I_LIST_ITEM);
      break;
    case D_LIST_ITEM:
      t = jj_consume_token(D_LIST_ITEM);
      break;
    default:
      jj_la1[2] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
                                                                             {if (true) return t;}
    throw new Error("Missing return statement in function");
  }

  final public Token getTABLE_ROW() throws ParseException {
                           Token t=null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case I_TABLE_ROW:
      t = jj_consume_token(I_TABLE_ROW);
      break;
    case D_TABLE_ROW:
      t = jj_consume_token(D_TABLE_ROW);
      break;
    default:
      jj_la1[3] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
                                                                             {if (true) return t;}
    throw new Error("Missing return statement in function");
  }

  final public Token getPROPERTY() throws ParseException {
                          Token t=null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case I_PROPERTY:
      t = jj_consume_token(I_PROPERTY);
      break;
    case D_PROPERTY:
      t = jj_consume_token(D_PROPERTY);
      break;
    default:
      jj_la1[4] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
                                                                          {if (true) return t;}
    throw new Error("Missing return statement in function");
  }

  final public Token getHEADER_BEGIN() throws ParseException {
                              Token t=null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case I_HEADER_BEGIN:
      t = jj_consume_token(I_HEADER_BEGIN);
      break;
    case D_HEADER_BEGIN:
      t = jj_consume_token(D_HEADER_BEGIN);
      break;
    default:
      jj_la1[5] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
                                                                                      {if (true) return t;}
    throw new Error("Missing return statement in function");
  }

  final public Token getREFERENCE() throws ParseException {
                           Token t=null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case I_REFERENCE:
      t = jj_consume_token(I_REFERENCE);
      break;
    case D_REFERENCE:
      t = jj_consume_token(D_REFERENCE);
      break;
    default:
      jj_la1[6] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
                                                                             {if (true) return t;}
    throw new Error("Missing return statement in function");
  }

  final public Token getHEADER_END() throws ParseException {
                            Token t=null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case I_HEADER_END:
      t = jj_consume_token(I_HEADER_END);
      break;
    case D_HEADER_END:
      t = jj_consume_token(D_HEADER_END);
      break;
    default:
      jj_la1[7] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
                                                                                {if (true) return t;}
    throw new Error("Missing return statement in function");
  }

  final public Token getTABLE_CELL() throws ParseException {
                            Token t=null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case I_TABLE_CELL:
      t = jj_consume_token(I_TABLE_CELL);
      break;
    case D_TABLE_CELL:
      t = jj_consume_token(D_TABLE_CELL);
      break;
    default:
      jj_la1[8] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
                                                                                {if (true) return t;}
    throw new Error("Missing return statement in function");
  }

  final public Token getVERBATIM_INLINE() throws ParseException {
                                 Token t=null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case I_VERBATIM_INLINE:
      t = jj_consume_token(I_VERBATIM_INLINE);
      break;
    case D_VERBATIM_INLINE:
      t = jj_consume_token(D_VERBATIM_INLINE);
      break;
    default:
      jj_la1[9] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
                                                                                               {if (true) return t;}
    throw new Error("Missing return statement in function");
  }

  final public Token getFORMAT_SYMBOL() throws ParseException {
                               Token t=null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case I_FORMAT_SYMBOL:
      t = jj_consume_token(I_FORMAT_SYMBOL);
      break;
    case D_FORMAT_SYMBOL:
      t = jj_consume_token(D_FORMAT_SYMBOL);
      break;
    default:
      jj_la1[10] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
                                                                                         {if (true) return t;}
    throw new Error("Missing return statement in function");
  }

    // "Standard" tokens. They are the same for all wikis.
  final public Token getURI() throws ParseException {
                     Token t=null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case I_URI:
      t = jj_consume_token(I_URI);
      break;
    case D_URI:
      t = jj_consume_token(D_URI);
      break;
    default:
      jj_la1[11] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
                                                           {if (true) return t;}
    throw new Error("Missing return statement in function");
  }

  final public Token getNL() throws ParseException {
                    Token t=null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case I_NL:
      t = jj_consume_token(I_NL);
      break;
    case D_NL:
      t = jj_consume_token(D_NL);
      break;
    default:
      jj_la1[12] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
                                                        {if (true) return t;}
    throw new Error("Missing return statement in function");
  }

  final public Token getSPACE() throws ParseException {
                       Token t=null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case I_SPACE:
      t = jj_consume_token(I_SPACE);
      break;
    case D_SPACE:
      t = jj_consume_token(D_SPACE);
      break;
    default:
      jj_la1[13] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
                                                                 {if (true) return t;}
    throw new Error("Missing return statement in function");
  }

  final public Token getWORD() throws ParseException {
                      Token t=null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case I_WORD:
      t = jj_consume_token(I_WORD);
      break;
    case D_WORD:
      t = jj_consume_token(D_WORD);
      break;
    default:
      jj_la1[14] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
                                                              {if (true) return t;}
    throw new Error("Missing return statement in function");
  }

  final public Token getSPECIAL_SYMBOL() throws ParseException {
                                Token t=null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case I_SPECIAL_SYMBOL:
      t = jj_consume_token(I_SPECIAL_SYMBOL);
      break;
    case D_SPECIAL_SYMBOL:
      t = jj_consume_token(D_SPECIAL_SYMBOL);
      break;
    default:
      jj_la1[15] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
                                                                                            {if (true) return t;}
    throw new Error("Missing return statement in function");
  }

 // </getters>
  final public void doParse() throws ParseException {
    token_source.SwitchTo(token_source.INITIAL_CONTEXT);
        fContext.beginDocument();
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case I_VERBATIM_START:
      case I_ESCAPE:
      case I_LIST_ITEM:
      case I_TABLE_ROW:
      case I_PROPERTY:
      case I_HEADER_BEGIN:
      case I_REFERENCE:
      case I_HEADER_END:
      case I_TABLE_CELL:
      case I_VERBATIM_INLINE:
      case I_FORMAT_SYMBOL:
      case I_URI:
      case I_NL:
      case I_SPACE:
      case I_WORD:
      case I_SPECIAL_SYMBOL:
      case D_VERBATIM_START:
      case D_ESCAPE:
      case D_LIST_ITEM:
      case D_TABLE_ROW:
      case D_PROPERTY:
      case D_HEADER_BEGIN:
      case D_REFERENCE:
      case D_HEADER_END:
      case D_TABLE_CELL:
      case D_VERBATIM_INLINE:
      case D_FORMAT_SYMBOL:
      case D_URI:
      case D_NL:
      case D_SPACE:
      case D_WORD:
      case D_SPECIAL_SYMBOL:
        ;
        break;
      default:
        jj_la1[16] = jj_gen;
        break label_1;
      }
      docElements();
    }
    jj_consume_token(0);
        fContext.endDocument();
  }

  final public void docElements() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case I_PROPERTY:
    case D_PROPERTY:
      properties();
      break;
    case I_HEADER_BEGIN:
    case D_HEADER_BEGIN:
      header();
      break;
    case I_TABLE_ROW:
    case D_TABLE_ROW:
      table();
      break;
    case I_LIST_ITEM:
    case D_LIST_ITEM:
      list();
      break;
    case I_VERBATIM_START:
    case D_VERBATIM_START:
      verbatimBlock();
      break;
    case I_ESCAPE:
    case I_REFERENCE:
    case I_HEADER_END:
    case I_TABLE_CELL:
    case I_VERBATIM_INLINE:
    case I_FORMAT_SYMBOL:
    case I_URI:
    case I_SPACE:
    case I_WORD:
    case I_SPECIAL_SYMBOL:
    case D_ESCAPE:
    case D_REFERENCE:
    case D_HEADER_END:
    case D_TABLE_CELL:
    case D_VERBATIM_INLINE:
    case D_FORMAT_SYMBOL:
    case D_URI:
    case D_SPACE:
    case D_WORD:
    case D_SPECIAL_SYMBOL:
      if (jj_2_1(2)) {
        quot();
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case I_ESCAPE:
        case I_REFERENCE:
        case I_HEADER_END:
        case I_TABLE_CELL:
        case I_VERBATIM_INLINE:
        case I_FORMAT_SYMBOL:
        case I_URI:
        case I_SPACE:
        case I_WORD:
        case I_SPECIAL_SYMBOL:
        case D_ESCAPE:
        case D_REFERENCE:
        case D_HEADER_END:
        case D_TABLE_CELL:
        case D_VERBATIM_INLINE:
        case D_FORMAT_SYMBOL:
        case D_URI:
        case D_SPACE:
        case D_WORD:
        case D_SPECIAL_SYMBOL:
          paragraph();
          break;
        default:
          jj_la1[17] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
      break;
    case I_NL:
    case D_NL:
      emptyParagraph();
      break;
    default:
      jj_la1[18] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void properties() throws ParseException {
    Token t = null;
    t = getPROPERTY();
        String str = t.image.trim();
        str = str.substring(1);
        fContext.beginPropertyBlock(str, false);
    if (jj_2_2(2)) {
      line();
    } else {
      ;
    }
        fContext.endPropertyBlock();
  }

  final public void header() throws ParseException {
   Token t = null;
    t = getHEADER_BEGIN();
        int level = t.image.trim().length();
        fContext.beginHeader(level);
    if (jj_2_3(2)) {
      line();
    } else {
      ;
    }
        fContext.endHeader();
  }

  final public void table() throws ParseException {
   Token t = null;
   String str = "";
        fContext.beginTable();
    label_2:
    while (true) {
      tableRow();
      if (jj_2_4(2)) {
        ;
      } else {
        break label_2;
      }
    }
        fContext.endTable();
  }

  final public void tableRow() throws ParseException {
    Token t = null;
    t = getTABLE_ROW();
        fContext.beginTableRow(false);
    label_3:
    while (true) {
      if (jj_2_5(2)) {
        ;
      } else {
        break label_3;
      }
      block();
    }
        fContext.endTableRow();
  }

  final public void list() throws ParseException {
        fContext.beginList();
    label_4:
    while (true) {
      listItem();
      if (jj_2_6(2)) {
        ;
      } else {
        break label_4;
      }
    }
        fContext.endList();
  }

  final public void listItem() throws ParseException {
    Token t = null;
    t = getLIST_ITEM();
            fContext.beginListItem(t.image);
    label_5:
    while (true) {
      if (jj_2_7(2)) {
        ;
      } else {
        break label_5;
      }
      block();
    }
            fContext.endListItem();
  }
